Update 'bhsjj0yvq-go' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.xjiang0905.c0x6.p3.openshiftapps.com/rhtap/rhtap-qe:9f98740f09400c5509c2d6347bcb8f3f2fe75d27@sha256:6d2a6c843a122c1e12a80918ed50919c254ee8c19199db637431bdd0cabc1e00

--- a/components/bhsjj0yvq-go/overlays/development/deployment-patch.yaml
+++ b/components/bhsjj0yvq-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: bhsjj0yvq-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.xjiang0905.c0x6.p3.openshiftapps.com/rhtap/rhtap-qe:9f98740f09400c5509c2d6347bcb8f3f2fe75d27@sha256:6d2a6c843a122c1e12a80918ed50919c254ee8c19199db637431bdd0cabc1e00
+          name: container-image
